cps/static/css/style.css
/*$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$/*
8==D~~                                                    8==D~~
8==D~~                 WELCOME! :D                        8==D~~
8==D~~                                                    8==D~~
/*$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$*/


/* General Styles */

@font-face {
  font-family: 'Comfortaa';
  src: url('../fonts/Comfortaa/Comfortaa-VariableFont_wght.ttf') format('truetype-variations'),
       url('../fonts/Comfortaa/static/Comfortaa-Regular.ttf') format('truetype');
  font-weight: 200 300 400 500 600 700 800 900;
  font-display: swap;
}

@font-face {
  font-family: 'Inter';
  src: url('../fonts/Inter/Inter-VariableFont_opsz,wght.ttf') format('truetype-variations'),
       url('../fonts/Inter/static/Inter_24pt-Regular.ttf') format('truetype');
  font-weight: 100 900;
  font-optical-sizing: auto;
  font-display: swap;
}
/* f34848 */
:root {
    --primary: #f34848;
    --primary-hover: color-mix(in srgb, var(--primary) 85%, black);
}

h2, h3, h4, p {
    margin-top: 0;
}

h2 {
    font-size: x-large;
    font-weight: 500;
    color: #581C1C;
    line-height: 1.25;
}

h3 {
    font-size: large;
    font-weight: 500;
    color: #581C1C;
    line-height: 1.3;
}

h4 {
    font-size: medium;
    font-weight: 500;
    color: #808080;
    line-height: 1.3;
}

p {
    font-size: medium;
    font-weight: 300;
    color: #555555;
    line-height: 1.5;
    opacity: 0.85;
}


li {
    list-style: none;
    margin: 8px 0;
    color: #581C1C !important;
    font-weight: 500 !important;
    font-size: medium !important;
    display: block !important;
    padding: 6px 10px !important;
}

ul { padding:0;
margin: 0;}


a {
    text-decoration: none;
    color: #535fe8;
}

/* Global Styling */

#navbar, .sidebar, .admin-page-wrapper {
        box-shadow: inset 3px 4px 4px 0 rgba(0, 0, 0, 0.15);
}



/* LAYOUT & NAVBAR */
body {
    display: flex;
    overflow-x: hidden;
    margin: 0;
    background-color: black;
    padding: 0;
    font-family: 'Inter', sans-serif;
}
.app-wrapper { 
    display: flex; 
    flex-direction: row;
    width: 100%; 
    height: calc(100vh - 20px); 
    overflow: hidden; 
    border-radius: 40px !important;
    background-color: var(--primary);
    gap:12px;
    border-style: solid;
    border-width: 10px;
    border-color:transparent;
    border-radius: 43px;
}

#page-scripts {
    display: none;
}

#navbar { 
    margin: 0px;
    border-radius: 40px;
    width: auto; 
    display: flex; 
    flex-direction: column; 
    flex-shrink: 0;
    background: rgba(255, 255, 255, .99); 
    border-right: 1px solid #ddd; 
}
#navbar-menus-wrapper { 
    display: flex; 
    flex-direction: column; 
    flex-grow: 1;
    justify-content: space-between;
    padding: 10px 0;
}

.nav-button {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 5px;
    gap: 5px;
    transition: background-color 0.3s, color 0.3s;
    border-radius: 100px;
    border: 0px;
    background-color: transparent;
}
.nav-button-icon {
    display: flex;
    align-items: center;
    justify-content: center;
}

.nav-button-icon svg {
    fill: black;
}

.nav-button-text {
    font-family: 'Comfortaa', sans-serif;
    font-size: small;
    font-weight: 500;
    color: black;
}

.navigation-items {
    display: flex;
    flex-direction: column;
    gap: 15px;
    padding: 10px;
  }

.user-popover-menu {
    min-width: 250px;
    position: absolute;
    bottom: 0;
    left: calc(100% + 15px);
    background-color:rgba(255, 255, 255, 0.75);
    padding:20px;
    margin:10px;
    backdrop-filter: blur(10px);
    border-radius:10px;
    border-color:#581C1C;
    box-shadow: -1px 2px 10px #00000033;
    z-index: 51;
}


.user-popover-menu h3 {
    margin-top:0;
    padding-top:0px;
    font-size:large;
}


details[open] .user-popover-menu {
    animation: pop-in 0.05s cubic-bezier(0.04, 0, 0.2, 1.25) forwards;
}

.user-popover-arrow {
    position: absolute;
    bottom: 12px;
    left: -8px;
    width: 0;
    height: 0;
    border-top: 8px solid transparent;
    border-bottom: 8px solid transparent;
    border-right: 8px solid rgba(255, 255, 255, 0.75);
}

.user-popup-button {
    display:flex;
    justify-content: left;
    align-items: center;
    margin:0px;
    border-radius: 50px;
    padding:5px 5px;
    border-color: transparent;
    background-color: transparent;
    gap: 10px;
    font-weight: 400;
    font-size: medium;
    text-decoration: none;
    color: #581C1C;
    cursor: pointer;
    }


@keyframes pop-in {
    0% {
        opacity: 0;
        transform: scale(0.5) translateY(5px);
    }
    100% {
        opacity: 1;
        transform: scale(1) translateY(0);
    }

}

@keyframes professional-fade {
    0% {
        opacity: 0;
        transform: scale(0.95) translateY(5px);
    }
    100% {
        opacity: 1;
        transform: scale(1) translateY(0);
    }
}

.user-popover {position: relative}



      
.navbar-left-vertical { 
    padding: 15px; }

.nav-head { 
    font-weight: bold; 
    padding: 10px 0; 
    border-bottom: 1px solid #eee; 
    margin-bottom: 5px; }




.content-layout {
    display: flex;
    gap: 10px;
    align-items: flex-start;
}


.main-content-area {
    display:flex;
    flex-direction: column;
    flex: 1;
    min-width: 0;
    margin:0;
    padding:0;
    position:relative;
}

.main-content-wrapper { 
    flex-grow: 1; 
    padding: 0px 0 10px 0; 
    overflow-y: auto; 
    display: block; 
    overflow-x: hidden;
    margin: 0;
    border-radius: 40px;
}

.main-content {
    flex-grow: 1;
    padding: 70px 0 40px 0;
    overflow-y: auto;
    display: flex;
    overflow-x: hidden;
    margin: 0;
    border-radius: 40px;
    flex-direction: column;
    gap: 128px;
    margin: -10px 0;
    height: calc(100% + 20px);
    box-sizing: border-box;
}
/* ... */

